fix(ui): identify appbar title not being truncated

--- a/src/content/styles/modules/_appbar.scss
+++ b/src/content/styles/modules/_appbar.scss
@@ -34,6 +34,8 @@
     .main-appbar {
         @extend %appbar;
 
+        width: inherit;
+
         .rv-appbar-title {
             @extend %appbar-title;
         }
